--- a/package.json
+++ b/package.json
@@ -16,22 +16,23 @@
     "expo-linking": "8.0.11",
     "expo-router": "6.0.21",
     "expo-status-bar": "3.0.9",
-    "nativewind": "4.2.1",
-    "prettier-plugin-tailwindcss": "0.5.11",
     "react": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-reanimated": "4.1.1",
-    "react-native-safe-area-context": "5.6.0",
-    "react-native-screens": "4.16.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-safe-area-context": "5.6.0"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "6.0.2",
     "@types/react": "19.1.10",
+    "@typescript-eslint/eslint-plugin": "8.18.2",
+    "@typescript-eslint/parser": "8.18.2",
     "eslint": "9.0.0",
     "eslint-config-expo": "10.0.0",
+    "eslint-config-prettier": "10.1.8",
+    "eslint-plugin-import": "2.32.0",
+    "eslint-plugin-prettier": "5.5.5",
+    "eslint-plugin-react": "7.37.5",
     "eslint-plugin-react-compiler": "19.1.0-rc.2",
-    "tailwindcss": "3.3.2",
+    "prettier": "3.8.0",
     "typescript": "5.9.2"
   },
   "private": true
