--- a/package.json
+++ b/package.json
@@ -4,22 +4,27 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md}\""
   },
   "dependencies": {
-    "expo": "54.0.31",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@supabase/supabase-js": "2.93.2",
+    "expo": "54.0.32",
     "expo-constants": "18.0.13",
+    "expo-image": "3.0.11",
     "expo-linking": "8.0.11",
-    "expo-router": "6.0.21",
+    "expo-router": "6.0.22",
+    "expo-splash-screen": "31.0.13",
     "expo-status-bar": "3.0.9",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-safe-area-context": "5.6.0",
-    "react-native-screens": "4.16.0"
+    "react-native-screens": "4.16.0",
+    "react-native-url-polyfill": "3.0.0"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "6.0.2",
