Enhance app configuration and add EAS support
- Updated `app.json` to include extra configuration for EAS, including project ID and updates URL.
- Introduced `eas.json` for build and submission configurations across development, preview, and production environments.
- Updated `package.json` and `package-lock.json` to include new dependencies for `expo-updates` and related packages.

--- a/app.json
+++ b/app.json
@@ -26,6 +26,18 @@
     },
     "android": {
       "package": "com.mardanov.trainingtracker"
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "4e6c49dc-eef9-4c43-b2a1-127dbfa94dc5"
+      }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/4e6c49dc-eef9-4c43-b2a1-127dbfa94dc5"
     }
   }
 }
