--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web",
+    "publish": "eas update --branch production",
     "lint": "expo lint",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md}\""
   },
@@ -20,6 +19,7 @@
     "expo-router": "6.0.22",
     "expo-splash-screen": "31.0.13",
     "expo-status-bar": "3.0.9",
+    "expo-updates": "29.0.16",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-safe-area-context": "5.6.0",
