--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,md}\""
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "0.4.2",
     "@expo/vector-icons": "15.0.3",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@supabase/supabase-js": "2.93.2",
     "expo": "54.0.32",
+    "expo-blur": "15.0.8",
     "expo-constants": "18.0.13",
+    "expo-font": "14.0.11",
     "expo-image": "3.0.11",
     "expo-linking": "8.0.11",
     "expo-router": "6.0.22",
