--- a/app.json
+++ b/app.json
@@ -1,13 +1,13 @@
 {
   "expo": {
-    "name": "training-tracker",
-    "slug": "training-tracker",
+    "name": "ТурнікМен",
+    "slug": "turnikmen",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
-    "scheme": "trainingtracker",
+    "scheme": "turnikmen",
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
@@ -15,7 +15,7 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.mardanov.training-tracker"
+      "bundleIdentifier": "com.mardanov.turnikmen"
     },
     "plugins": [
       "expo-router"
@@ -25,7 +25,7 @@
       "reactCompiler": true
     },
     "android": {
-      "package": "com.mardanov.trainingtracker"
+      "package": "com.mardanov.turnikmen"
     },
     "extra": {
       "router": {},
