chore: clean up app configuration by removing unused plugins and background modes, and update package dependencies

--- a/app.json
+++ b/app.json
@@ -15,34 +15,17 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.mardanov.turnikman",
-      "infoPlist": {
-        "UIBackgroundModes": [
-          "remote-notification"
-        ]
-      }
+      "bundleIdentifier": "com.mardanov.turnikman"
     },
     "plugins": [
-      "expo-router",
-      [
-        "expo-notifications",
-        {
-          "icon": "./assets/icon.png",
-          "color": "#06B6D4",
-          "sounds": []
-        }
-      ]
+      "expo-router"
     ],
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
     },
     "android": {
-      "package": "com.mardanov.turnikman",
-      "permissions": [
-        "RECEIVE_BOOT_COMPLETED",
-        "VIBRATE"
-      ]
+      "package": "com.mardanov.turnikman"
     },
     "extra": {
       "router": {},
